# mymongo

./: .pre-commit-config.yaml  pyproject.toml  pytest.ini
.github/workflows/: pytest.ini  pytest.yaml
